[gd_scene load_steps=11 format=3 uid="uid://fm1aomfwwiti"]

[ext_resource type="Script" path="res://PART - OBJECTS/SCRIPTS/fallingrock.gd" id="1_nesqd"]
[ext_resource type="Texture2D" uid="uid://vfoht717xa1m" path="res://PART - OBJECTS/ASSETS/FallingRock-export.png" id="2_6ud3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gli8t"]
size = Vector2(160, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4v6kf"]
size = Vector2(160, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7763"]
size = Vector2(160, 160)

[sub_resource type="Animation" id="Animation_x8mcy"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fondu/AnimatableBody2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hlj7x"]
_data = {
"Break broke broken": SubResource("Animation_x8mcy")
}

[sub_resource type="Animation" id="Animation_nv1qs"]
resource_name = "base"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_svm3w"]
resource_name = "fondu"
length = 1.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kdqog"]
_data = {
"base": SubResource("Animation_nv1qs"),
"fondu": SubResource("Animation_svm3w")
}

[node name="Fallingrock" type="Node2D"]
scale = Vector2(0.15, 0.15)
script = ExtResource("1_nesqd")

[node name="Fondu" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="Fondu"]

[node name="Sprite2D" type="Sprite2D" parent="Fondu/AnimatableBody2D"]
texture_filter = 1
texture = ExtResource("2_6ud3g")
hframes = 4
vframes = 3
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://PART - LEVELS/ASSETS/Trap/FallingRock-export.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "f2521ac8da5434df4f08a23ab5cfd1de"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fondu/AnimatableBody2D"]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_gli8t")

[node name="above" type="Area2D" parent="Fondu/AnimatableBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fondu/AnimatableBody2D/above"]
position = Vector2(0, -162)
shape = SubResource("RectangleShape2D_4v6kf")
debug_color = Color(0.222041, 0.626418, 0.365491, 0.42)

[node name="inrock" type="Area2D" parent="Fondu/AnimatableBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fondu/AnimatableBody2D/inrock"]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_g7763")
debug_color = Color(0.856765, 0.364568, 0.0680732, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fondu"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_hlj7x")
}

[node name="FonduPlayer" type="AnimationPlayer" parent="Fondu"]
libraries = {
"": SubResource("AnimationLibrary_kdqog")
}

[connection signal="body_entered" from="Fondu/AnimatableBody2D/above" to="." method="_on_above_body_entered"]
[connection signal="body_entered" from="Fondu/AnimatableBody2D/inrock" to="." method="_on_inrock_body_entered"]
[connection signal="body_exited" from="Fondu/AnimatableBody2D/inrock" to="." method="_on_inrock_body_exited"]
[connection signal="animation_finished" from="Fondu/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Fondu/FonduPlayer" to="." method="_on_fondu_player_animation_finished"]
